Completata modale per selezione colore, background e testi

--- a/index.html
+++ b/index.html
@@ -924,7 +924,8 @@
         <!-- /.card -->
         <div class="card">
             <h2>Modifica la visualizzazione</h2>
-            <p>Modifica la dimensione del testo, colore o background</p>
+            <!-- /.text-muted -->
+            <p class="text-muted">Modifica la dimensione del testo, colore o background</p>
             <!-- /.font-size -->
             <div class="font-size">
                 <h4>Font Size</h4>
@@ -935,7 +936,7 @@
                         <!-- /.font-size-1 -->
                         <span class="font-size-1"></span>
                         <!-- /.font-size-2 -->
-                        <span class="font-size-2"></span>
+                        <span class="font-size-2 active"></span>
                         <!-- /.font-size-3 -->
                         <span class="font-size-3"></span>
                         <!-- /.font-size-4 -->
@@ -965,14 +966,14 @@
             </div>
             <!-- /.background -->
             <div class="background">
-                <h4></h4>
+                <h4>Background</h4>
                 <!-- /.choose-bg -->
                 <div class="choose-bg">
                     <!-- /.bg-1 -->
                     <div class="bg-1">
                         <span></span>
                         <!-- /.bg-1 -->
-                        <h5 for="bg-1"></h5>
+                        <h5 for="bg-1">Light</h5>
                     </div>
                     <!-- /.bg-2 -->
                     <div class="bg-2">
@@ -983,17 +984,16 @@
                     <div class="bg-3">
                         <span></span>
                         <!-- /.bg-3 -->
-                        <h5 for="bg-3"></h5>
+                        <h5 for="bg-3">Lights Out</h5>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     
-
-    <!-- Link alla mia Modale -->
-    <script src="./assets/js/modal.js"></script>
     <!-- Link a JS -->
     <script type="module" src='./assets/js/app.js'></script>
+    <!-- Link alla mia Modale -->
+    <script src="./assets/js/modal.js"></script>
 </body>
 </html>
