Aggiunto media Queries a 1200px e a 992px. Creato partials apposito e collegato al style.scss

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
     </main>
 
     <!-- /.customize-theme -->
-    <div class="customize-theme">
+    <section class="customize-theme">
         <!-- /.card -->
         <div class="card">
             <h2>Modifica la visualizzazione</h2>
@@ -989,7 +989,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     
     <!-- Link a JS -->
     <script type="module" src='./assets/js/app.js'></script>
