--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <span><i class="uil uil-chart-line"></i></span> <h3>Analytics</h3>                                         
                     </a>                                            
                     <!-- /.menu-item  -->
-                    <a class="menu-item">
+                    <a class="menu-item" id="theme">
                         <!-- /.uil uil-palette -->
                         <span><i class="uil uil-palette"></i></span> <h3>Theme</h3>                                         
                     </a>                                              
