Creata funzione per cambiamento colore background dinamico. Necessario riavvio PC

--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                 <!-- /.choose-bg -->
                 <div class="choose-bg">
                     <!-- /.bg-1 -->
-                    <div class="bg-1">
+                    <div class="bg-1 active">
                         <span></span>
                         <!-- /.bg-1 -->
                         <h5 for="bg-1">Light</h5>
