--- a/index.html
+++ b/index.html
@@ -64,17 +64,8 @@
                 </a>
                 <!-- /.sidebar -->
                 <div class="sidebar">
-                    <!-- Saranno da generare dinamicamente -->
-                    <!-- /.menu-item active  -->
-                    <a class="menu-item active">
-                        <!-- /.uil uil-home -->
-                        <span><i class="uil uil-home"></i></span> <h3>Home</h3>                                            
-                    </a>
-                    <!-- /.menu-item  -->
-                    <a class="menu-item">
-                        <!-- /.uil uil-compass -->
-                        <span><i class="uil uil-compass"></i></span> <h3>Explore</h3>                                            
-                    </a>
+                    <!-- Primi due link Generati Dinamicamente -->
+
                     <!-- /.menu-item  -->
                     <a class="menu-item" id="notificationsPopup">
                         <!-- /.uil uil-bell -->
@@ -208,61 +199,7 @@
             <section class="middle">
                 <!-- /.stories #siteStories -->
                 <div id="siteStories" class="stories">
-                    <!-- Son da fare dinamicamente -->
-                    <!-- /.story -->
-                    <div class="story">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-8.jpg">
-                        </div>
-                        <!-- /.name -->
-                        <p class="name">Your Story</p>
-                    </div>
-                    <!-- /.story -->
-                    <div class="story">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-9.jpg">
-                        </div>
-                        <!-- /.name -->
-                        <p class="name">Lilla James</p>
-                    </div>
-                    <!-- /.story -->
-                    <div class="story">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-10.jpg">
-                        </div>
-                        <!-- /.name -->
-                        <p class="name">Winnie Hale</p>
-                    </div>
-                    <!-- /.story -->
-                    <div class="story">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-11.jpg">
-                        </div>
-                        <!-- /.name -->
-                        <p class="name">Daniel Bale</p>
-                    </div>
-                    <!-- /.story -->
-                    <div class="story">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-12.jpg">
-                        </div>
-                        <!-- /.name -->
-                        <p class="name">Jane Doe</p>
-                    </div>
-                    <!-- /.story -->
-                    <div class="story">
-                        <!-- /.profile-picture -->
-                        <div class="profile-picture">
-                            <img src="./assets/img/profile-13.jpg">
-                        </div>
-                        <!-- /.name -->
-                        <p class="name">Tina White</p>
-                    </div>                    
+                    <!-- Cards delle stories sono generate dinamicamente -->                   
                 </div>
                 <!-- /.create-post -->
                 <form class="create-post">
@@ -300,10 +237,10 @@
                     <!-- /.categories -->
                     <div class="categories">
                         <!-- /.active -->
-                        <h6 class="active">Primary</h6>
-                        <h6>General</h6>
+                        <h6 class="active pointer">Primary</h6>
+                        <h6 class="pointer">General</h6>
                         <!-- /.message-requests -->
-                        <h6 class="message-requests">Requests(7)</h6>
+                        <h6 class="message-requests pointer">Requests(7)</h6>
                     </div>
                     <!-- /.box-messages -->
                     <!-- Messaggi interni sono da fare dinamici -->
@@ -537,7 +474,7 @@
     </section>
     
     <!-- Link a JS -->
-    <script type="module" src='./assets/js/app.js'></script>
+    <script defer type="module" src='./assets/js/app.js'></script>
     <!-- Link alla mia Modale -->
     <script src="./assets/js/modal.js"></script>
 </body>
