Implementato sezioni su box messages e aggiunto classi dinamiche.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,17 @@
                 </a>
                 <!-- /.sidebar -->
                 <div class="sidebar">
-                    <!-- Primi due link Generati Dinamicamente -->
-
+                    <!-- Saranno da generare dinamicamente -->
+                    <!-- /.menu-item active  -->
+                    <a class="menu-item active">
+                        <!-- /.uil uil-home -->
+                        <span><i class="uil uil-home"></i></span> <h3>Home</h3>                                            
+                    </a>
+                    <!-- /.menu-item  -->
+                    <a class="menu-item">
+                        <!-- /.uil uil-compass -->
+                        <span><i class="uil uil-compass"></i></span> <h3>Explore</h3>                                            
+                    </a>
                     <!-- /.menu-item  -->
                     <a class="menu-item" id="notificationsPopup">
                         <!-- /.uil uil-bell -->
@@ -237,16 +246,15 @@
                     <!-- /.categories -->
                     <div class="categories">
                         <!-- /.active -->
-                        <h6 class="active pointer">Primary</h6>
-                        <h6 class="pointer">General</h6>
+                        <h6 class="active primary pointer">Primary</h6>
+                        <h6 class="pointer general">General</h6>
                         <!-- /.message-requests -->
                         <h6 class="message-requests pointer">Requests(7)</h6>
                     </div>
                     <!-- /.box-messages -->
-                    <!-- Messaggi interni sono da fare dinamici -->
                     <div class="box-messages">
                         <!-- /.message -->
-                        <div class="message">
+                        <div class="message pointer">
                             <!-- /.profile-picture -->
                             <div class="profile-picture">
                                 <img src="./assets/img/profile-10.jpg" >
@@ -259,7 +267,7 @@
                             </div>
                         </div>
                         <!-- /.message -->
-                        <div class="message">
+                        <div class="message pointer">
                             <!-- /.profile-picture -->
                             <div class="profile-picture">
                                 <img src="./assets/img/profile-9.jpg" >
@@ -272,7 +280,7 @@
                             </div>
                         </div>
                         <!-- /.message -->
-                        <div class="message">
+                        <div class="message pointer">
                             <!-- /.profile-picture -->
                             <div class="profile-picture">
                                 <img src="./assets/img/profile-12.jpg" >
@@ -285,7 +293,7 @@
                             </div>
                         </div>
                         <!-- /.message -->
-                        <div class="message">
+                        <div class="message pointer">
                             <!-- /.profile-picture -->
                             <div class="profile-picture">
                                 <img src="./assets/img/profile-7.jpg" >
@@ -298,7 +306,7 @@
                             </div>
                         </div>                    
                         <!-- /.message -->
-                        <div class="message">
+                        <div class="message pointer">
                             <!-- /.profile-picture -->
                             <div class="profile-picture">
                                 <img src="./assets/img/profile-5.jpg" >
@@ -311,7 +319,7 @@
                             </div>
                         </div>
                         <!-- /.message -->
-                        <div class="message">
+                        <div class="message pointer">
                             <!-- /.profile-picture -->
                             <div class="profile-picture">
                                 <img src="./assets/img/profile-3.jpg" >
@@ -325,7 +333,16 @@
                                 <p class="text-bold">Birthday Tomorrow!</p>
                             </div>
                         </div> 
+                        <!-- /.generalBox -->
+                        <div class="generalBox">
+                            <h3>Non ci sono notizie qua..</h3>
+                        </div>
+                        <!-- /.requestBox -->
+                        <div class="requestBox">
+                            Box Richieste
+                        </div>
                     </div>
+
                 </div>
                 <!-- /.friend-requests -->
                 <div class="friend-requests">
