Aggiunto modifiche al responsive e aggiunto le richieste nella sezione specifica

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <h6 class="active primary pointer">Primary</h6>
                         <h6 class="pointer general">General</h6>
                         <!-- /.message-requests -->
-                        <h6 class="message-requests pointer">Requests(7)</h6>
+                        <h6 class="message-requests pointer">Requests</h6>
                     </div>
                     <!-- /.box-messages -->
                     <div class="box-messages">
@@ -335,84 +335,78 @@
                         </div> 
                         <!-- /.generalBox -->
                         <div class="generalBox">
-                            <h3>Non ci sono notizie qua..</h3>
+                            <h4 style="margin: 0 auto;">Non c'è niente qua..</h4>
                         </div>
                         <!-- /.requestBox -->
-                        <div class="requestBox">
-                            Box Richieste
+                        <div class="requestBox friend-requests">
+                            <!-- /.request -->
+                            <div class="request">
+                                <!-- /.info -->
+                                <div class="info">
+                                    <!-- /.profile-picture -->
+                                    <div class="profile-picture">
+                                        <img src="./assets/img/profile-15.jpg">
+                                    </div>
+                                    <div>
+                                        <h5>Haija Bintu</h5>
+                                        <!-- /.text-muted -->
+                                        <p class="text-muted">8 amici in comune</p>
+                                    </div>
+                                </div>
+                                <!-- /.action -->
+                                <div class="action">
+                                    <!-- /.btn btn-primary -->
+                                    <button class="btn btn-primary">Accetta</button>
+                                    <!-- /.btn -->
+                                    <button class="btn">Declina</button>
+                                </div>
+                            </div>
+                            <!-- /.request -->
+                            <div class="request">
+                                <!-- /.info -->
+                                <div class="info">
+                                    <!-- /.profile-picture -->
+                                    <div class="profile-picture">
+                                        <img src="./assets/img/profile-11.jpg">
+                                    </div>
+                                    <div>
+                                        <h5>Jackline Mensah</h5>
+                                        <!-- /.text-muted -->
+                                        <p class="text-muted">2 amici in comune</p>
+                                    </div>
+                                </div>
+                                <!-- /.action -->
+                                <div class="action">
+                                    <!-- /.btn btn-primary -->
+                                    <button class="btn btn-primary">Accetta</button>
+                                    <!-- /.btn -->
+                                    <button class="btn">Declina</button>
+                                </div>
+                            </div>
+                            <!-- /.request -->
+                            <div class="request">
+                                <!-- /.info -->
+                                <div class="info">
+                                    <!-- /.profile-picture -->
+                                    <div class="profile-picture">
+                                        <img src="./assets/img/profile-1.jpg">
+                                    </div>
+                                    <div>
+                                        <h5>Jennifer Lawrence</h5>
+                                        <!-- /.text-muted -->
+                                        <p class="text-muted">19 amici in comune</p>
+                                    </div>
+                                </div>
+                                <!-- /.action -->
+                                <div class="action">
+                                    <!-- /.btn btn-primary -->
+                                    <button class="btn btn-primary">Accetta</button>
+                                    <!-- /.btn -->
+                                    <button class="btn">Declina</button>
+                                </div>
+                            </div>   
                         </div>
                     </div>
-
-                </div>
-                <!-- /.friend-requests -->
-                <div class="friend-requests">
-                    <h4>Requests</h4>
-                    <!-- /.request -->
-                    <div class="request">
-                        <!-- /.info -->
-                        <div class="info">
-                            <!-- /.profile-picture -->
-                            <div class="profile-picture">
-                                <img src="./assets/img/profile-15.jpg">
-                            </div>
-                            <div>
-                                <h5>Haija Bintu</h5>
-                                <!-- /.text-muted -->
-                                <p class="text-muted">8 amici in comune</p>
-                            </div>
-                        </div>
-                        <!-- /.action -->
-                        <div class="action">
-                            <!-- /.btn btn-primary -->
-                            <button class="btn btn-primary">Accetta</button>
-                            <!-- /.btn -->
-                            <button class="btn">Declina</button>
-                        </div>
-                    </div>
-                    <!-- /.request -->
-                    <div class="request">
-                        <!-- /.info -->
-                        <div class="info">
-                            <!-- /.profile-picture -->
-                            <div class="profile-picture">
-                                <img src="./assets/img/profile-11.jpg">
-                            </div>
-                            <div>
-                                <h5>Jackline Mensah</h5>
-                                <!-- /.text-muted -->
-                                <p class="text-muted">2 amici in comune</p>
-                            </div>
-                        </div>
-                        <!-- /.action -->
-                        <div class="action">
-                            <!-- /.btn btn-primary -->
-                            <button class="btn btn-primary">Accetta</button>
-                            <!-- /.btn -->
-                            <button class="btn">Declina</button>
-                        </div>
-                    </div>
-                    <!-- /.request -->
-                    <div class="request">
-                        <!-- /.info -->
-                        <div class="info">
-                            <!-- /.profile-picture -->
-                            <div class="profile-picture">
-                                <img src="./assets/img/profile-1.jpg">
-                            </div>
-                            <div>
-                                <h5>Jennifer Lawrence</h5>
-                                <!-- /.text-muted -->
-                                <p class="text-muted">19 amici in comune</p>
-                            </div>
-                        </div>
-                        <!-- /.action -->
-                        <div class="action">
-                            <!-- /.btn btn-primary -->
-                            <button class="btn btn-primary">Accetta</button>
-                            <!-- /.btn -->
-                            <button class="btn">Declina</button>
-                        </div>
-                    </div>                                        
                 </div>
             </section>
         </div>
