Aggiunto modifiche al click su tasto accetta o declina richiesta amicizia

--- a/index.html
+++ b/index.html
@@ -356,10 +356,18 @@
                                 <!-- /.action -->
                                 <div class="action">
                                     <!-- /.btn btn-primary -->
-                                    <button class="btn btn-primary">Accetta</button>
+                                    <button class="btn accept btn-primary">Accetta</button>
                                     <!-- /.btn -->
-                                    <button class="btn">Declina</button>
+                                    <button class="btn decline">Declina</button>
                                 </div>
+                                <!-- /.message-success -->
+                                <div class="message-success">
+                                    <h4>Contatto accettato</h4>
+                                </div>
+                                <!-- /.message-decline -->
+                                <div class="message-decline">
+                                    <h4>Contatto Rifiutato</h4>
+                                </div>                                
                             </div>
                             <!-- /.request -->
                             <div class="request">
@@ -378,10 +386,18 @@
                                 <!-- /.action -->
                                 <div class="action">
                                     <!-- /.btn btn-primary -->
-                                    <button class="btn btn-primary">Accetta</button>
+                                    <button class="btn accept btn-primary">Accetta</button>
                                     <!-- /.btn -->
-                                    <button class="btn">Declina</button>
+                                    <button class="btn decline">Declina</button>
                                 </div>
+                                <!-- /.message-success -->
+                                <div class="message-success">
+                                    <h4>Contatto accettato</h4>
+                                </div>
+                                <!-- /.message-decline -->
+                                <div class="message-decline">
+                                    <h4>Contatto Rifiutato</h4>
+                                </div>  
                             </div>
                             <!-- /.request -->
                             <div class="request">
@@ -400,11 +416,19 @@
                                 <!-- /.action -->
                                 <div class="action">
                                     <!-- /.btn btn-primary -->
-                                    <button class="btn btn-primary">Accetta</button>
+                                    <button class="btn accept btn-primary">Accetta</button>
                                     <!-- /.btn -->
-                                    <button class="btn">Declina</button>
+                                    <button class="btn decline">Declina</button>
                                 </div>
-                            </div>   
+                                <!-- /.message-success -->
+                                <div class="message-success">
+                                    <h4>Contatto accettato</h4>
+                                </div>
+                                <!-- /.message-decline -->
+                                <div class="message-decline">
+                                    <h4>Contatto Rifiutato</h4>
+                                </div>  
+                            </div>  
                         </div>
                     </div>
                 </div>
