Creato funzione per post dinamici al click sul button post

--- a/index.html
+++ b/index.html
@@ -219,11 +219,12 @@
                     <!-- /#create-post -->
                     <input id="create-post" type="text" placeholder="Raccontaci qualcosa, Alessandro">
                     <!-- /.btn btn-primary -->
-                    <input type="submit" value="Post" class="btn btn-primary">
+                    <input type="submit" value="Post" id="postButton" class="btn btn-primary">
                 </form>
                 <!-- /.feeds -->
                 <div class="feeds">
-                    <!-- Tutti i feed sono stai genera -->
+                    <!-- Il post singolo è stato reso dinamico -->
+                    <!-- Tutti i feed sono stai generati dinamicamente -->
                 </div>
             </section>
             <!-- /.right -->
@@ -347,6 +348,7 @@
                                     <div class="profile-picture">
                                         <img src="./assets/img/profile-15.jpg">
                                     </div>
+                                    <!-- Name/Friends -->
                                     <div>
                                         <h5>Haija Bintu</h5>
                                         <!-- /.text-muted -->
@@ -507,10 +509,11 @@
             </div>
         </div>
     </section>
+
+
+    
     
     <!-- Link a JS -->
     <script defer type="module" src='./assets/js/app.js'></script>
-    <!-- Link alla mia Modale -->
-    <script src="./assets/js/modal.js"></script>
 </body>
 </html>
