Esercizio completato e portato a termine

--- a/index.html
+++ b/index.html
@@ -88,85 +88,7 @@
                         <h3>Notifications</h3>
                         <!-- /.notifications-popup --> 
                         <div class="notifications-popup">
-                            <!-- Pensa a farli dinamici -->
-                            <!-- Keke -->
-                            <div>
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-1.jpg">
-                                </div>
-                                <!-- /.notification-body -->
-                                <div class="notification-body">
-                                    <b>Keke Benjamin</b> ha accettato la tua richiesta
-                                    <!-- /.text-muted -->
-                                    <small class="text-muted">2 days ago</small>
-                                </div>
-                            </div>
-                            <!-- John -->
-                            <div>
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-2.jpg">
-                                </div>
-                                <!-- /.notification-body -->
-                                <div class="notification-body">
-                                    <b>John Doe</b> ha commentato il tuo post
-                                    <!-- /.text-muted -->
-                                    <small class="text-muted">1 ora fa</small>
-                                </div>
-                            </div>                            
-                            <!-- Donald -->
-                            <div>
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-3.jpg">
-                                </div>
-                                <!-- /.notification-body -->
-                                <div class="notification-body">
-                                    <b>Donald Trump</b> ha commentato il tuo post
-                                    <!-- /.text-muted -->
-                                    <small class="text-muted">1 ora fa</small>
-                                </div>
-                            </div> 
-                            <!-- Mary -->
-                            <div>
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-4.jpg">
-                                </div>
-                                <!-- /.notification-body -->
-                                <div class="notification-body">
-                                    <b>Mary Oppong</b> e <b>altri 283</b> hanno messo like al tuo post
-                                    <!-- /.text-muted -->
-                                    <small class="text-muted">1 ora fa</small>
-                                </div>
-                            </div>
-                            <!-- Doris -->
-                            <div>
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-5.jpg">
-                                </div>
-                                <!-- /.notification-body -->
-                                <div class="notification-body">
-                                    <b>Doris Y. Lartey</b> ha commentato un post in cui sei taggato
-                                    <!-- /.text-muted -->
-                                    <small class="text-muted">1 ora fa</small>
-                                </div>
-                            </div>                                                        
-                            <!-- Jane -->
-                            <div>
-                                <!-- /.profile-picture -->
-                                <div class="profile-picture">
-                                    <img src="./assets/img/profile-6.jpg">
-                                </div>
-                                <!-- /.notification-body -->
-                                <div class="notification-body">
-                                    <b>Jane Doe</b> ha commentato un post in cui sei taggato
-                                    <!-- /.text-muted -->
-                                    <small class="text-muted">1 ora fa</small>
-                                </div>
-                            </div>                            
+                            <!-- Post dinamici -->                         
                         </div>                                   
                     </a>                    
                     <!-- /.menu-item #messages-notifications  -->
