--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- /.create -->
             <div class="create">
                 <!-- /.btn btn-primary -->
-                <label class="btn btn-primary" for="create-post">Create</label>
+                <label class="btn btn-primary" for="create-post">Crea</label>
                 <!-- /.profile-picture -->
                 <div class="profile-picture">
                     <img src="./assets/img/profile-8.jpg" alt="Profile Picture">
@@ -73,7 +73,7 @@
                     <!-- /.menu-item  -->
                     <a class="menu-item">
                         <!-- /.uil uil-compass -->
-                        <span><i class="uil uil-compass"></i></span> <h3>Explore</h3>                                            
+                        <span><i class="uil uil-compass"></i></span> <h3>Esplora</h3>                                            
                     </a>
                     <!-- /.menu-item  -->
                     <a class="menu-item" id="notificationsPopup">
@@ -85,7 +85,7 @@
                                 <small class="notification-count">9+</small> 
                             </i>    
                         </span> 
-                        <h3>Notifications</h3>
+                        <h3>Notifiche</h3>
                         <!-- /.notifications-popup --> 
                         <div class="notifications-popup">
                             <!-- Post dinamici -->                         
@@ -100,12 +100,12 @@
                                 <small class="notification-count">6</small>
                             </i>
                         </span> 
-                        <h3>Messages</h3>                                           
+                        <h3>Messaggi</h3>                                           
                     </a>
                     <!-- /.menu-item  -->
                     <a class="menu-item">
                         <!-- /.uil uil-bookmark -->
-                        <span><i class="uil uil-bookmark"></i></span> <h3>Bookmarks</h3>                                          
+                        <span><i class="uil uil-bookmark"></i></span> <h3>Preferiti</h3>                                          
                     </a>
                     <!-- /.menu-item  -->
                     <a class="menu-item">
@@ -115,16 +115,16 @@
                     <!-- /.menu-item  -->
                     <a class="menu-item" id="theme">
                         <!-- /.uil uil-palette -->
-                        <span><i class="uil uil-palette"></i></span> <h3>Theme</h3>                                         
+                        <span><i class="uil uil-palette"></i></span> <h3>Temi</h3>                                         
                     </a>                                              
                     <!-- /.menu-item  -->
                     <a class="menu-item">
                         <!-- /.uil uil-setting -->
-                        <span><i class="uil uil-setting"></i></span> <h3>Settings</h3>                                      
+                        <span><i class="uil uil-setting"></i></span> <h3>Impostazioni</h3>                                      
                     </a>                                             
                 </div>
                 <!-- /.btn btn-primary -->
-                <label for="create-post" class="btn btn-primary">Create Post</label>
+                <label for="create-post" class="btn btn-primary">Crea Post</label>
             </section>
             <!-- /.middle -->    
             <section class="middle">
@@ -169,10 +169,10 @@
                     <!-- /.categories -->
                     <div class="categories">
                         <!-- /.active -->
-                        <h6 class="active primary pointer">Primary</h6>
-                        <h6 class="pointer general">General</h6>
+                        <h6 class="active primary pointer">Primari</h6>
+                        <h6 class="pointer general">Generale</h6>
                         <!-- /.message-requests -->
-                        <h6 class="message-requests pointer">Requests</h6>
+                        <h6 class="message-requests pointer">Richieste</h6>
                     </div>
                     <!-- /.box-messages -->
                     <div class="box-messages">
@@ -432,9 +432,6 @@
         </div>
     </section>
 
-
-    
-    
     <!-- Link a JS -->
     <script defer type="module" src='./assets/js/app.js'></script>
 </body>
